# Bonito-Customizations

./: .gitignore  ERPNext_Backup_Restoration_Runbook.md  MANIFEST.in  README.md  pyproject.toml  setup.py
bonito_customizations/: bulk_journal_entry_native.py  bulk_payment_entry_native.py  bulk_pi_native.py  bulk_si_native.py  fix_tds_on_bulk_pis.py  hooks.py  modules.txt  pinv_one_to_one_api.py
bonito_customizations/config/: desktop.py  docs.py
