# pyproject.toml

[project]
name = "bonito_customizations"
version = "0.0.1"
description = "Custom Frappe application"
authors = [
    { name = "Basawaraj", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.bench.frappe-dependencies]
frappe = ">1=6.0.0"
